--- a/it4women/index.html
+++ b/it4women/index.html
@@ -64,9 +64,25 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	<h1>Web Design</h1>
 </div>
 
-<section class="container-wide">
+
+<section class="container-wide" style="padding-top:0; margin-top:-20px">
 
 
+<section class="block-content">
+
+
+	<h2>Google Classroom</h2>
+	<div class="box-toc" style="background-color:#e2f5e2">
+		<p>The Google Classroom for the course is <a href="https://meet.google.com/swk-tdha-err" target="_blank"><b>here</b></a>.</p>
+
+		<p>My email address is <b>munnellyb@gmail.com</b>.</p>
+	</div>
+
+
+</section>
+</section>
+
+<section class="container-wide" style="margin-top:30px">
 
 
 	<h2>Setting Up</h2>
@@ -143,10 +159,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 <section class="container-wide">
 
-	<h2>Stylesheets and Colour Systems</h2>
+	<h2>Stylesheets, Colours and Images</h2>
 
 	<div class="flex-grid">
-
 
 
 		<div class="item-3">
@@ -176,7 +191,16 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			<p>Understanding images, resetting browser defaults, discovering sources of free images, and adding images to your web pages.</p>
 			<a class="btn-solid btn-rounded" href="exercises/intro-images.html">View Tutorial<i class="fas fa-arrow-right"></i></a>
 		</div>
+	</div><!--- /flex-grid -->
 
+</section>
+
+
+<section class="container-wide">
+
+	<h2>Typography with Google Fonts</h2>
+
+	<div class="flex-grid">
 		<div class="item-3">
 			 <a href="exercises/intro-google-fonts.html">
 				<img src="assets/img/toc-fonts.png" class="img-shadow" alt="portfolio all the light">
@@ -186,25 +210,147 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			<a class="btn-solid btn-rounded" href="exercises/intro-google-fonts.html">View Tutorial<i class="fas fa-arrow-right"></i></a>
 		</div>
 
+		<div class="item-3">&nbsp;</div>
 
-		<div class="item-3">
-			<a href="exercises/setting-up-google-analytics.html">
-				<img src="assets/img/toc-ga.png" class="img-shadow" alt="portfolio all the light">
-			</a>
-			<h3><a href="exercises/setting-up-google-analytics.html">Setting Up Google Analytics</a></h3>
-			<p>Monitoring your website visitors with Google Analytics and adding the unique tracking code to your web pages.</p>
-			<a class="btn-solid btn-rounded" href="exercises/setting-up-google-analytics.html">View Tutorial<i class="fas fa-arrow-right"></i></a>
-		</div>
-
-
+		<div class="item-3">&nbsp;</div>
 
 	</div><!--- /flex-grid -->
 </section>
 
 
+<section class="container-wide">
+
+	<h2>The Box Model</h2>
+
+
+	<div class="flex-grid">
+
+		<div class="item-3">
+			<a href="exercises/intro-box-model.html">
+				<img src="assets/img/toc-box-model-new.png" class="img-shadow" alt="portfolio all the light">
+			</a>
+			<h3><a href="exercises/intro-box-model.html">Introduction to the Box Model</a></h3>
+			<p>Exploring the concept of the &#8216;box model&#8217; and understanding the three main CSS properties of the div tag: padding, borders and margins.</p>
+			<a class="btn-solid btn-rounded" href="exercises/intro-box-model.html">View Tutorial<i class="fas fa-arrow-rigg:ht"></i></a>
+		</div>
+
+		<div class="item-3">
+			<a href="exercises/working-with-panels.html">
+				<img src="assets/img/toc-panels.png" class="img-shadow" alt="portfolio all the light">
+			</a>
+			<h3><a href="exercises/working-with-panels.html">Working with Panels</a></h3>
+			<p>Using the box model principles and the HTML div tag to create and style small, visually attractive panels of content in a web page.</p>
+			<a class="btn-solid btn-rounded" href="exercises/working-with-panels.html">View Tutorial<i class="fas fa-arrow-right"></i></a>
+		</div>
+
+
+		<div class="item-3">
+			 <a href="exercises/working-with-sections.html">
+				<img src="assets/img/toc-sections.png" class="img-shadow" alt="portfolio all the light">
+			</a>
+			<h3><a href="exercises/working-with-sections.html">Working with Sections</a></h3>
+			<p>Using the box model principles and the HTML div tag to create and style vertically alternating sections of content in a web page.</p>
+			<a class="btn-solid btn-rounded" href="exercises/working-with-sections.html">View Tutorial<i class="fas fa-arrow-right"></i></a>
+		</div>
+
+	</div><!--- /flex-grid -->
+
+
+</section>
+
+
+<section class="container-wide">
+
+	<h2>Responsive Web Design</h2>
+
+	<div class="flex-grid">
+		<div class="item-3">
+			<a href="exercises/intro-media-queries.html">
+				<img src="assets/img/toc-flexbox.png" class="img-shadow" alt="portfolio all the light">
+			</a>
+			<h3><a href="exercises/intro-media-queries.html">Introduction to Media Queries</a></h3>
+			<p>Adding media queries to a CSS file so that web page elements can resize according to the width and height of the screen.</p>
+			<a class="btn-solid btn-rounded" href="exercises/intro-media-queries.html">View Tutorial<i class="fas fa-arrow-rigg:ht"></i></a>
+		</div>
+
+		<div class="item-3">
+			<a href="exercises/intro-fluid-type.html">
+				<img src="assets/img/toc-fluid-typography.png" class="img-shadow" alt="portfolio all the light">
+			</a>
+			<h3><a href="exercises/intro-fluid-type.html">Introduction to Fluid Typography</a></h3>
+			<p>Applying the fluid typographic equation to scale font sizes responsively.</p>
+			<a class="btn-solid btn-rounded" href="exercises/intro-fluid-type.html">View Tutorial<i class="fas fa-arrow-right"></i></a>
+		</div>
+
+
+		<div class="item-3">&nbsp;
+
+		</div>
 
 
 
+	</div><!--- /flex-grid -->
+
+</section>
+
+<section class="container-wide">
+
+	<h2>Hyperlinks, Buttons and Icons</h2>
+
+
+	<div class="flex-grid">
+
+		<div class="item-3">
+			<a href="exercises/hyperlinks-intro.html">
+				<img src="assets/img/toc-hyperlinks-intro.png" class="img-shadow" alt="portfolio all the light">
+			</a>
+			<h3><a href="exercises/hyperlinks-intro.html">Introduction to Hyperlinks</a></h3>
+			<p>Understanding the difference between absolute and relative hyperlinks, and adding hyperlinks to sample web pages.</p>
+			<a class="btn-solid btn-rounded" href="exercises/hyperlinks-intro.html">View Tutorial<i class="fas fa-arrow-rigg:ht"></i></a>
+		</div>
+
+		<div class="item-3">
+			<a href="exercises/hyperlinks-styling.html">
+				<img src="assets/img/toc-hyperlinks-styles.png" class="img-shadow" alt="portfolio all the light">
+			</a>
+			<h3><a href="exercises/hyperlinks-styling.html">Styling Hyperlinks with CSS</a></h3>
+			<p>Applying CSS style rules such as text colours, borders and transitions to the five hyperlink states: link, visited, focus, hover and active.</p>
+			<a class="btn-solid btn-rounded" href="exercises/hyperlinks-styling.html">View Tutorial<i class="fas fa-arrow-right"></i></a>
+		</div>
+
+
+		<div class="item-3">
+			 <a href="exercises/hyperlinks-internal.html">
+				<img src="assets/img/toc-hyperlinks-internal.png" class="img-shadow" alt="portfolio all the light">
+			</a>
+			<h3><a href="exercises/hyperlinks-internal.html">Working with Internal Hyperlinks</a></h3>
+			<p>Creating a Wikipedia-style web page navigation system with a smooth-scrolling visual effect.</p>
+			<a class="btn-solid btn-rounded" href="exercises/hyperlinks-internal.html">View Tutorial<i class="fas fa-arrow-right"></i></a>
+		</div>
+
+</section>
+
+
+<section class="container-wide-padding">
+
+	<h2>Web Design Projects</h2>
+
+	<div class="flex-grid">
+
+
+		<div class="item-3">
+			<a href="projects/project-van-gogh/index.html">
+				<img src="assets/img/project-van-gogh.png" class="img-shadow" alt="Project: Web Agency"></a>
+		    <h3><a href="projects/project-van-gogh/index.html">Vincent van Gogh</a></h3>
+		    <p>A single-page website about Dutch artist Vincent van Gogh with an embedded and responsive video from YouTube.</p>
+		    <a href="projects/project-van-gogh/index.html" class="button-solid">View Project<i class="fas fa-arrow-right"></i></a>		  
+		</div>
+
+
+
+
+	</div><!-- End parent flexbox container -->
+</section>
 
 <section class="block-content bg-white">
 
