--- a/it4women/index.html
+++ b/it4women/index.html
@@ -348,6 +348,18 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 
 
+		<div class="item-3">
+			<a href="https://www.munnelly.com/webdesign/exercises/setting-up-google-analytics.html">
+				<img src="assets/img/toc-ga.png" class="img-shadow" alt="portfolio all the light">
+			</a>
+			<h3><a href="https://www.munnelly.com/webdesign/exercises/setting-up-google-analytics.html">Setting Up Google Analytics</a></h3>
+			<p>Monitoring your website visitors with Google Analytics and adding the unique tracking code to your web pages.</p>
+			<a class="btn-solid btn-rounded" href="https://www.munnelly.com/webdesign/exercises/setting-up-google-analytics.html">View Tutorial<i class="fas fa-arrow-right"></i></a>
+		</div>
+
+		<div class="item-3">&nbsp;
+		</div>
+
 
 	</div><!-- End parent flexbox container -->
 </section>
