--- a/it4women/projects/project-smoothies/index.html
+++ b/it4women/projects/project-smoothies/index.html
@@ -42,8 +42,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	<h2>Introduction</h2>
 	<p>This responsive single-page website for a fictitious smoothie outlet contains a showcase of multi-column layouts created with CSS flexbox.</p>
 	
-	<p>You can display a <a href="../final/final-smoothies/after/index.html" target="_blank" title="Web Design Project: Travel Agency 2n2l.com Brendan Munnelly">finished version</a> of this project by clicking the image below.</p>
-	<p><a href="../final/final-smoothies/after/index.html" class="img-link" target="_blank"><img src="../assets/img/project-smoothies/smoothie-finished.png" alt="Web Design Project: Travel Agency 2n2l.com Brendan Munnelly"></a></p>
+
 </section> 
 
 
@@ -62,9 +61,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	<p>Your first step is to download the files you need for this project.</p>
 	<ol>
 		<li>If a sub-folder named <b>portfolio</b> does not already exist inside your <b>websites</b> folder, create it now.
-		<img src="../assets/img/project-smoothies/file-explorer-portfolio-folder.png" alt="file-explorer-portfolio-folder">
+		<img src="project-smoothies/file-explorer-portfolio-folder.png" alt="file-explorer-portfolio-folder">
 		<div class="box-toc"  style="background-color: #FFFF99;color:#000">
-		<img src="../assets/img/project-smoothies/warning-sign.png" style="width:170px;height:141px;float:left;margin:0 20px 30px -12px;padding-bottom:20px" alt="GitHub image">
+		<img src="project-smoothies/warning-sign.png" style="width:170px;height:141px;float:left;margin:0 20px 30px -12px;padding-bottom:20px" alt="GitHub image">
 		<span style="background-color:red; color: #fff; font-weight:bold; padding: 0 4px">DO NOT</span> name your sub-folder with an upper-case &#8216;P&#8217; as in <b style="color:#000">Portfolio</b>.
 		<br>And <span style="background-color:red; color: #fff; font-weight:bold; padding: 0 4px">DO NOT</span> use some other mixture of upper and lower-case letters, such as <b style="color:#000">PortFolio</b> or <b style="color:#000">PORTfolio</b> or whatever.
 		<br>Also, <span style="background-color:red; color: #fff; font-weight:bold; padding: 0 4px">DO NOT</span> enter any blank spaces in the name of your sub-folder: type <b style="color:#000">portfolio</b> <span style="background-color:red; color: #fff; font-weight:bold; padding: 0 4px">NOT</span> <b style="color:#000">port folio</b>.
@@ -74,14 +73,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		<a href="smoothies.zip">smoothies.zip</a></li>
 
 		<li>Uncompress the ZIP file into your <b>websites/portfolio</b> sub-folder as shown below.
-		<img src="../assets/img/project-smoothies/file-explorer-unzip-files.png" alt="file-explorer-unzip-files"></li>
+		<img src="project-smoothies/file-explorer-unzip-files.png" alt="file-explorer-unzip-files"></li>
 	</ol>
 	<p>This will create a sub-folder named <b>smoothies</b> inside your <b>portfolio</b> folder.</p>
-	<img src="../assets/img/project-smoothies/file-explorer-portfolio-project-folder.png" alt="file-explorer-portfolio-project-folder">
+	<img src="project-smoothies/file-explorer-portfolio-project-folder.png" alt="file-explorer-portfolio-project-folder">
 
 	<p>The folders, sub-folders and files for this 'Smoothies' project will be as shown below.</p>
 
-	<img src="../assets/img/project-smoothies/file-explorer-full.png" alt="file-explorer-full">
+	<img src="project-smoothies/file-explorer-full.png" alt="file-explorer-full">
 </section>
 
 
@@ -96,7 +95,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		</ul>
 		</li>
 	</ol>
-	<img src="../assets/img/project-smoothies/vscode-two-files.png" alt="vs-two  nd-files">
+	<img src="project-smoothies/vscode-two-files.png" alt="vs-two  nd-files">
 	<p>You can close any other files you may have open in VS Code.</p>
 </section>
 
@@ -122,7 +121,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 	<p>Your next task is to create the basic <b>container</b>, <b>row</b> and <b>col-md-2</b> layout of your project <b>index.html</b> web page, as shown below.</p>
 
-	<img src="../assets/img/project-smoothies/smoothies-big-screen.png" alt="prohect in web browser">
+	<img src="project-smoothies/smoothies-big-screen.png" alt="prohect in web browser">
 
 	<p>Copy-and-paste these from your <b>bootstrap-grid.html</b> file.</p>
 
@@ -140,7 +139,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 	<p>In your web browser, view the web page on desktop/laptop and mobile size screens. It should look as shown below.</p>
 
-	<img src="../assets/img/project-smoothies/final-1.png" alt="vscode-container-padding">
+	<img src="project-smoothies/final-1.png" alt="vscode-container-padding">
 
 
 </section>
@@ -150,12 +149,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	<h2>Styling the introduction text</h2>
 	<p>At the top of the <b>index.html</b> web page, just after the opening <span class="syn">&lt;body&gt;</span> tag, you can see a <b>container-block</b> section containing text enclosed within a <span class="syn">&lt;h2&gt;</span> ... <span class="syn">&lt;/h2&gt;</span> tag pair.</p>
 	
-	<img src="../assets/img/project-smoothies/vscode-intro-block.png" alt="vscode-bg-colours">
+	<img src="project-smoothies/vscode-intro-block.png" alt="vscode-bg-colours">
 
 	<ol>
 		<li>In VS Code, display the <b>style.css</b> file. The <span class="csyn">h2</span> selector has just one style rule applied to it. This rule applies a fixed <b>font-size</b> value of <b>48px</b> to the introduction text.
 
-		<img src="../assets/img/project-smoothies/vs-code-intro-block.png" alt="vscode-bg-colours"></li>
+		<img src="project-smoothies/vs-code-intro-block.png" alt="vscode-bg-colours"></li>
 
 		<li>Update the <b>font-size</b> property of the <span class="csyn">h2</span> selector to a fluid value using the typographic equation.
 
@@ -187,14 +186,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </pre>
 
 	The <span class="csyn">h2</span> selector and its declaration of style rules should now look as shown below.
-	<img src="../assets/img/project-smoothies/vs-code-intro-final.png" alt="vscode-bg-colours"></li>
+	<img src="project-smoothies/vs-code-intro-final.png" alt="vscode-bg-colours"></li>
 
 	<li>Save your <b>style.html</b> file.</li>
 	</ol>
 
 	<p>In your web browser, view the web page on desktop/laptop and mobile size screens. It should look as shown below.  The coloured lines are just visual guides.</p>
 
-	<img src="../assets/img/project-smoothies/final-2.png" alt="vscode-container-padding">
+	<img src="project-smoothies/final-2.png" alt="vscode-container-padding">
 	
 	
 </section>
@@ -205,7 +204,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	<h2>Adding background colours to the sections</h2>
 	<p>In the <b>style.css</b> stylesheet, you can see four selectors with style rules have been created for background colour values.</p>
 	
-	<img src="../assets/img/project-smoothies/vscode-bg-colours.png" alt="vscode-bg-colours">
+	<img src="project-smoothies/vscode-bg-colours.png" alt="vscode-bg-colours">
 
 	<p>Let&#8217;s apply these background colour classes to your project web page.</p>
 
@@ -219,7 +218,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 	<p>In your web browser, view the web page on desktop/laptop and mobile size screens. It should look as shown below.</p>
 	
-	<img src="../assets/img/project-smoothies/final-3.png" alt="vscode-container-padding">
+	<img src="project-smoothies/final-3.png" alt="vscode-container-padding">
 
 </section>
 
@@ -250,7 +249,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 	<p>In the <b>index.html</b> file, you can see that <i>only</i> the blueberry smoothie has a class name of <b>bg-blueberry</b> applied to it. None of the three other smoothies have this class name.</p>
 
-	<img src="../assets/img/project-smoothies/vscode-blueberry.png" alt="vscode-blueberry-bg-color">
+	<img src="project-smoothies/vscode-blueberry.png" alt="vscode-blueberry-bg-color">
 
 	<p>Therefore, in your CSS stylesheet, you can <i>target</i> the sub-heading and text paragraph within this block with the following parent-child selectors.</p>
 
@@ -264,18 +263,18 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	<ol>
 		<li>In your <b>style.css</b> file, enter the following.
 
-			<img src="../assets/img/project-smoothies/vscode-blueberry-fixed.png" alt="vscode-blueberry-bg-color">
+			<img src="project-smoothies/vscode-blueberry-fixed.png" alt="vscode-blueberry-bg-color">
 
 			Or, in shorter form.
 
-			<img src="../assets/img/project-smoothies/vscode-blueberry-fixed-shorter.png" alt="vscode-blueberry-bg-color"></li>
+			<img src="project-smoothies/vscode-blueberry-fixed-shorter.png" alt="vscode-blueberry-bg-color"></li>
 
 		<li>Save your <b>style.html</b> file.</li>
 	</ol>
 
 	<p>In your web browser, view the web page on desktop/laptop and mobile size screens. It should look as shown below.</p>
 
-	<img src="../assets/img/project-smoothies/final-6.png" alt="vscode-container-padding">
+	<img src="project-smoothies/final-6.png" alt="vscode-container-padding">
 
 </section>
 
@@ -292,17 +291,17 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		<li>In VS Code, display the <b>style.css</b> file.</li>
 
 		<li>Under the new lines you added above to display the blueberry sub-heading and text in white, add a new comment and mobile media query as shown below.
-		<img src="../assets/img/project-smoothies/centre-align-content-1.png" alt="vscode-blueberry-bg-color"></li>
+		<img src="project-smoothies/centre-align-content-1.png" alt="vscode-blueberry-bg-color"></li>
 
 		<li>Next, enter the <b>text-align</b> property with a <b>center</b> value for both the <span class="csyn">h3</span> and <span class="csyn">p</span> selectors.
-		<img src="../assets/img/project-smoothies/centre-align-content-2.png" alt="vscode-blueberry-bg-color"></li>
+		<img src="project-smoothies/centre-align-content-2.png" alt="vscode-blueberry-bg-color"></li>
 
 		<li>Save your <b>style.html</b> file.</li>
 	</ol>
 
 	<p>In your web browser, view the web page on a mobile size screen. It should look as shown below.</p>
 
-	<img src="../assets/img/project-smoothies/final-7.png" alt="vscode-container-padding">
+	<img src="project-smoothies/final-7.png" alt="vscode-container-padding">
 
 </section>
 
@@ -314,7 +313,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	<p>On desktop/laptop screens, for all four smoothies, the sub-heading and text are always positioned in the left column and the image in the right.</p>
 	
 	<p>Follow the steps below to alternate how the two-column layouts for each of the four smoothies are displayed on screens of <b>768px</b> width or above.</p>
-	<img src="../assets/img/project-smoothies/columns-desktop-reorder.png" alt="vscode-apple-swap">
+	<img src="project-smoothies/columns-desktop-reorder.png" alt="vscode-apple-swap">
 	
 	<ol>
 
@@ -349,35 +348,35 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 	<ol>
 		<li>Open a new tab in your web browser and go to <a href="https://www.github.com" target="_blank">GitHub.com</a>. If you are not already signed in to your GitHub account, sign in now.
-		<img src="../assets/img/project-smoothies/github-signin.png" alt="github-signin"></li>
+		<img src="project-smoothies/github-signin.png" alt="github-signin"></li>
 
 		<li>On your GitHub home page, click the name of the repository (&#8216;repo&#8217;) that holds your web pages. Its name will look as follows, where <b>username</b> is your chosen username on GitHub.
 		<span class="inside-ol">&nbsp;</span>
 		<b>username.github.io</b>
 
-		<img src="../assets/img/project-smoothies/github-repo-select.png" alt="github-signin"></li>
+		<img src="project-smoothies/github-repo-select.png" alt="github-signin"></li>
 
 		<li>On the next GitHub screen displayed, near the right of the screen, you can see a button named <b>Add file</b>. Click on it.
-		<img src="../assets/img/project-smoothies/github-btn-add-file.png" alt="github-upload-portfolio"></li>
+		<img src="project-smoothies/github-btn-add-file.png" alt="github-upload-portfolio"></li>
 
 		<li>From the dropdown list displayed, choose the option <b>Upload files</b>.
 
-		<img src="../assets/img/project-smoothies/github-btn-add-file-dropdown.png" alt="Project Animation Google Fonts"></li>
+		<img src="project-smoothies/github-btn-add-file-dropdown.png" alt="Project Animation Google Fonts"></li>
 
 		<li>You are now ready to upload the <i>entire</i> <b>portfolio</b> folder and all its contents to your GitHub account.
 		<span class="inside-ol">&nbsp;</span>
 		
 		In File/Windows Explorer on your computer, drag-and-drop the <b>portfolio</b> folder to the GitHub tab in your web browser.
-		<img src="../assets/img/project-smoothies/github-upload-drag-drop.png" alt="github-upload-drag-drop"></li>
+		<img src="project-smoothies/github-upload-drag-drop.png" alt="github-upload-drag-drop"></li>
 
 		<li>After uploading the <b>portfolio</b> folder, scroll down to the bottom of the GitHub screen, enter a short message in the <b>Commit changes</b> box, click the <b>Commit changes</b> button, and wait for the upload to complete.
-		<img src="../assets/img/project-smoothies/github-upload-progress.png" alt="github-upload-progress"></li>
+		<img src="project-smoothies/github-upload-progress.png" alt="github-upload-progress"></li>
 
 		<li>Your Github account should now contain a folder named <b>portfolio</b> as shown below.
-		<img src="../assets/img/project-smoothies/github-uploaded-project.png" alt="github-uploaded-project">
+		<img src="project-smoothies/github-uploaded-project.png" alt="github-uploaded-project">
 		
 		Click on this to view its contents. It should contain the <b>smoothies</b> sub-folder. Click on this to see both the <b>index.html</b> file and the <b>assets</b> sub-folder.
-		<img src="../assets/img/project-smoothies/github-upload-portfolio-content.png" alt="github-upload-portfolio-content"></li>
+		<img src="project-smoothies/github-upload-portfolio-content.png" alt="github-upload-portfolio-content"></li>
 
 		<li>Click on the <b>assets</b> sub-folder to view its contents. You should see that it contains the two sub-folders: <b>css</b> and <b>img</b>.
 			<ul>
