--- a/it4women/index.html
+++ b/it4women/index.html
@@ -328,6 +328,24 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			<a class="btn-solid btn-rounded" href="exercises/hyperlinks-internal.html">View Tutorial<i class="fas fa-arrow-right"></i></a>
 		</div>
 
+		<div class="item-3">
+			 <a href="exercises/intro-bootstrap.html">
+				<img src="assets/imgtoc-html.png" class="img-shadow" alt="portfolio all the light">
+			</a>
+			<h3><a href="exercises/intro-bootstrap.html">Intro to Bootstrap</a></h3>
+			<p>At the end of this Tutorial you will be able to create a basic Bootstrap web page.</p>
+			<a class="btn-solid btn-rounded" href="exercises/intro-bootstrap.html">View Tutorial<i class="fas fa-arrow-right"></i></a>
+		</div>
+
+		<div class="item-3">
+			 <a href="exercises/intro-bootstrap-grid.html">
+				<img src="assets/img/toc-html.png" class="img-shadow" alt="portfolio all the light">
+			</a>
+			<h3><a href="exercises/bootstrap-grid.html">Bootstrap Grid</a></h3>
+			<p>Create and use responsive one, two, three and four-column grids with Bootstrap.</p>
+			<a class="btn-solid btn-rounded" href="exercises/bootstrap-grid.html">View Tutorial<i class="fas fa-arrow-right"></i></a>
+		</div>
+
 </section>
 
 
