--- a/it4women/index.html
+++ b/it4women/index.html
@@ -327,10 +327,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			<p>Creating a Wikipedia-style web page navigation system with a smooth-scrolling visual effect.</p>
 			<a class="btn-solid btn-rounded" href="exercises/hyperlinks-internal.html">View Tutorial<i class="fas fa-arrow-right"></i></a>
 		</div>
+	</div>
 
+	<div class="flex-grid">
 		<div class="item-3">
 			 <a href="exercises/intro-bootstrap.html">
-				<img src="assets/imgtoc-html.png" class="img-shadow" alt="portfolio all the light">
+				<img src="assets/img/toc-html.png" class="img-shadow" alt="portfolio all the light">
 			</a>
 			<h3><a href="exercises/intro-bootstrap.html">Intro to Bootstrap</a></h3>
 			<p>At the end of this Tutorial you will be able to create a basic Bootstrap web page.</p>
@@ -345,6 +347,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			<p>Create and use responsive one, two, three and four-column grids with Bootstrap.</p>
 			<a class="btn-solid btn-rounded" href="exercises/bootstrap-grid.html">View Tutorial<i class="fas fa-arrow-right"></i></a>
 		</div>
+
+		<div class="item-3">&#nbsp;</div>
 
 </section>
 
