--- a/it4women/index.html
+++ b/it4women/index.html
@@ -348,7 +348,15 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			<a class="btn-solid btn-rounded" href="exercises/intro-bootstrap-grid.html">View Tutorial<i class="fas fa-arrow-right"></i></a>
 		</div>
 
-		<div class="item-3">&#nbsp;</div>
+		<div class="item-3">
+			 <a href="projects/project-smoothies.html">
+				<img src="assets/img/toc-html.png" class="img-shadow" alt="portfolio all the light">
+			</a>
+			<h3><a href="projects/project-smoothiesl">Bootstrap Project</a></h3>
+			<p>Create and use responsive one, two, three and four-column grids with Bootstrap.</p>
+			<a class="btn-solid btn-rounded" href="projects/project-smoothiesl">View Tutorial<i class="fas fa-arrow-right"></i></a>
+		</div>
+
 
 </section>
 
