--- a/it4women/exercises/intro-bootstrap-grid.html
+++ b/it4women/exercises/intro-bootstrap-grid.html
@@ -52,7 +52,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	<h2>Learning Goals</h2>
 	<p>At the end of this Tutorial you will be able to:</p>
 	<ul>
-		<li>Create and use responsive one, two, three and four-column grds with Bootstrap.</li>
+		<li>Create and use responsive one, two, three and four-column grids with Bootstrap.</li>
 	</ul>
 
 
@@ -64,7 +64,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	<p>Let&#8217;s create a Bootstrap-based web page for working with multi-column layout grids. Here are the steps:</p>
 
 	<ol>
-		<li>In VS Code, open the <b>bootstrap.html</b> web page from your <b>bootstrap</b> sub-folder. your created this file and its folder structure in the <a href="intro-bootstrap.html">previous Tutorial</a>.</li>
+		<li>In VS Code, open the <b>bootstrap.html</b> web page from your <b>bootstrap</b> sub-folder. You created this file and its folder structure in the <a href="intro-bootstrap.html">previous Tutorial</a>.</li>
 
 		<li>Use the <b>File | Save As</b> command to save the file with the following new name:
 		<span class="inside-ol">&nbsp;</span>
