--- a/it4women/exercises/final-bootstrap-practical/bootstrap-practical-layouts-1.html
+++ b/it4women/exercises/final-bootstrap-practical/bootstrap-practical-layouts-1.html
@@ -3,18 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bootstrap Grid Practical</title>
-    <meta name="description" content="A Bootstrap web page with grid layout.">
+    <title>Bootstrap Practical Layouts</title>
+    <meta name="description" content="Some practical web page layouts with Bootstrap.">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <!-- Customise Bootstrap for practical grid layouts -->
+    <link rel="stylesheet" href="assets/css/bootstrap-custom.css">   
+    <style>
+        .container { border: solid 2px red }
+    </style>
 </head>
 
 
 <body>
     <div class="container">
         <h1>Hello, world!</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla exercitationem ipsum enim natus soluta rem eos? In dicta eius, reprehenderit illo odit mollitia nulla ex et odio minus expedita numquam! minus expedita numquam!
-        </p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla exercitationem ipsum enim natus soluta rem eos? In dicta eius, reprehenderit illo odit mollitia nulla ex et odio minus expedita numquam! minus expedita numquam!</p>
     </div>
 
     <div class="container">
@@ -46,6 +50,27 @@
            </div>
         </div>
     </div>    
+
+    <div class="container">
+        <div class="row">
+           <div class="col-md-3">
+              <h2>Sub-heading</h2>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla exercitationem ipsum enim natus soluta rem eos? In dicta eius, reprehenderit illo odit mollitia nulla ex et odio minus expedita numquam!</p>
+           </div>
+           <div class="col-md-3">
+              <h2>Sub-heading</h2>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla exercitationem ipsum enim natus soluta rem eos? In dicta eius, reprehenderit illo odit mollitia nulla ex et odio minus expedita numquam!</p>
+           </div>
+           <div class="col-md-3">
+              <h2>Sub-heading</h2>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla exercitationem ipsum enim natus soluta rem eos? In dicta eius, reprehenderit illo odit mollitia nulla ex et odio minus expedita numquam!</p>
+           </div>
+           <div class="col-md-3">
+              <h2>Sub-heading</h2>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla exercitationem ipsum enim natus soluta rem eos? In dicta eius, reprehenderit illo odit mollitia nulla ex et odio minus expedita numquam!</p>
+           </div>
+        </div>
+    </div>
 
     <!-- jQuery library -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
