--- a/it4women/index.html
+++ b/it4women/index.html
@@ -111,8 +111,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			<a href="exercises/working-with-text-editors.html">
 				<img src="assets/img/toc-vscode.png" class="img-shadow" alt="portfolio all the light">
 			</a>
-			<h3><a href="exercises/working-with-text-editors.html">Working with Text Editors</a></h3>
-			<p>Installing and customising a text editor for creating web pages (HTML files) and stylesheets (CSS files).</p>
+			<h3><a href="exercises/working-with-text-editors.html">Working with VS Code</a></h3>
+			<p>Installing and customising a Microsoft Visual Studio Code for creating web pages (HTML files) and stylesheets (CSS files).</p>
 			<a class="btn-solid btn-rounded" href="exercises/working-with-text-editors.html">View Tutorial<i class="fas fa-arrow-right"></i></a>
 		</div>
 
@@ -295,6 +295,47 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 <section class="container-wide">
 
+	<h2>Working with Boostrap</h2>
+
+	<div class="flex-grid">
+
+		<div class="item-3">
+			<a href="exercises/intro-bootstrap.html">
+				<img src="assets/img/toc-bs-1.png" class="img-shadow" alt="portfolio all the light">
+			</a>
+			<h3><a href="exercises/intro-bootstrap.html">Introduction to Bootstrap</a></h3>
+			<p>Create a basic Bootstrap web page by linking a standard HTML file to the Bootstrap stylesheet and JavaScript files.</p>
+			<a class="btn-solid btn-rounded" href="exercises/intro-bootstrap.html">View Tutorial<i class="fas fa-arrow-rigg:ht"></i></a>
+		</div>
+
+		<div class="item-3">
+			<a href="exercises/intro-bootstrap-grid.html">
+				<img src="assets/img/toc-bs-2.png" class="img-shadow" alt="portfolio all the light">
+			</a>
+			<h3><a href="exercises/intro-bootstrap-grid.html">The Bootstrap Grid</a></h3>
+			<p>Create and use responsive one, two, three and four-column layouts based on the Bootstrap grid system.</p>
+			<a class="btn-solid btn-rounded" href="exercises/intro-bootstrap-grid.html">View Tutorial<i class="fas fa-arrow-right"></i></a>
+		</div>
+
+
+		<div class="item-3">
+			<a href="exercises/intro-bootstrap-practical.html">
+				<img src="assets/img/toc-bs-3.png" class="img-shadow" alt="portfolio all the light">
+			</a>
+			<h3><a href="exercises/intro-bootstrap-practical.html">Practical Bootstrap Layouts</a></h3>
+			<p>Adjust the default Bootstrap grid to make it a more practical basis for designing modern-looking web pages.</p>
+			<a class="btn-solid btn-rounded" href="exercises/intro-bootstrap-practical.html">View Tutorial<i class="fas fa-arrow-right"></i></a>
+		</div>
+
+
+
+	</div><!--- /flex-grid -->
+</section>
+
+
+<!--
+<section class="container-wide">
+
 	<h2>Hyperlinks, Buttons and Icons</h2>
 
 
@@ -352,7 +393,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			 <a href="projects/project-smoothies.html">
 				<img src="assets/img/toc-html.png" class="img-shadow" alt="portfolio all the light">
 			</a>
-			<h3><a href="projects/project-smoothies.html">Bootstrap Project</a></h3>
+			<h3><a href="projects/project-smoothies.htmls">Bootstrap Project</a></h3>
 			<p>Create and use responsive one, two, three and four-column grids with Bootstrap.</p>
 			<a class="btn-solid btn-rounded" href="projects/project-smoothies.html">View Tutorial<i class="fas fa-arrow-right"></i></a>
 		</div>
@@ -360,6 +401,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 </section>
 
+-->
 
 <section class="container-wide-padding">
 
@@ -442,4 +484,5 @@ setTimeout(ldinsp, 0);
 <!-- End Inspectlet Asynchronous Code -->
 </body>
 </html>
+
 
