--- a/it4women/index.html
+++ b/it4women/index.html
@@ -295,7 +295,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 <section class="container-wide">
 
-	<h2>Working with Boostrap</h2>
+	<h2>Working with Bootstrap</h2>
 
 	<div class="flex-grid">
 
