--- a/it4women/index.html
+++ b/it4women/index.html
@@ -328,8 +328,37 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		</div>
 
 
+	</div><!--- /flex-grid -->
+</section>
+
+
+<section class="container-wide">
+
+	<h2>Hero Blocks</h2>
+
+
+	<div class="flex-grid">
+
+		<div class="item-3">
+			<a href="exercises/hero-blocks-one.html">
+				<img src="assets/img/toc-hero-one.png" class="img-shadow" alt="portfolio all the light">
+			</a>
+			<h3><a href="exercises/hero-blocks-one.html">Basic Hero Blocks</a></h3>
+			<p>Designing a range of basic hero blocks with various headings, buttons, icons, colours and alignments.</p>
+			<a class="btn-solid btn-rounded" href="exercises/hero-blocks-one.html">View Tutorial<i class="fas fa-arrow-right"></i></a>
+		</div>
+
+		<div class="item-3">
+			<p>&nbsp;</p>
+		</div>
+
+		<div class="item-3">
+			<p>&nbsp;</p>
+		</div>
 
 	</div><!--- /flex-grid -->
+
+
 </section>
 
 
