--- a/it4women/index.html
+++ b/it4women/index.html
@@ -344,7 +344,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 				<img src="assets/img/toc-hero-one.png" class="img-shadow" alt="portfolio all the light">
 			</a>
 			<h3><a href="exercises/hero-blocks-one.html">Basic Hero Blocks</a></h3>
-			<p>Designing a range of basic hero blocks with various headings, buttons, icons, colours and alignments.</p>
+			<p>Designing a range of basic hero blocks (jumbotrons) with various fonts, colours and animation effects.</p>
 			<a class="btn-solid btn-rounded" href="exercises/hero-blocks-one.html">View Tutorial<i class="fas fa-arrow-right"></i></a>
 		</div>
 
