--- a/it4women/exercises/intro-bootstrap-practical.html
+++ b/it4women/exercises/intro-bootstrap-practical.html
@@ -82,7 +82,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 		<li>Add a custom stylesheet that adjusts the default Bootstrap grid so that it becomes a more practical starting point for designing modern-looking web pages.</li>
 
-		<li>Update the background colours of Broostrap grid elemts, and add images to grid rows and columns.</li>
+		<li>Update the background colours of Broostrap grid elements, and add images to grid rows and columns.</li>
 	</ul>
 
 
