--- a/it4women/exercises/hero-blocks-one.html
+++ b/it4women/exercises/hero-blocks-one.html
@@ -588,7 +588,71 @@ You have now finished creating the <b>slide-in-top</b> class.</li>
 	</ol>
 
 	<p>Repeat this stept to add icons to the other buttons in the other hero blocks.</p>
-	
+
+</section>
+
+<section id="sample-websites" class="wrapper-content bg-white">
+
+<h2>Sample personal websites</h2>
+	<div class="container-flexbox sample-pages">
+		<div class="item-3">
+			<a target="_blank" href="https://inakisoria.com/">https://inakisoria.com/</a>
+		</div>
+		<div class="item-3">
+			<a target="_blank" href="https://gerireid.com">https://gerireid.com</a>
+		</div>
+		<div class="item-3">
+			<a target="_blank" href="https://thierrychopain.com">https://thierrychopain.com</a>
+		</div>
+		<div class="item-3">
+			<a target="_blank" href="https://marisachentakul.co">https://marisachentakul.co</a>
+		</div>
+		<div class="item-3">
+			<a target="_blank" href="https://www.britnor.codes">https://www.britnor.codes</a>
+		</div>
+		<div class="item-3">
+			<a target="_blank" href="https://rebwill.github.io">https://rebwill.github.io</a>
+		</div>
+		<div class="item-3">
+			<a target="_blank" href="https://nikokoneko.com/">https://nikokoneko.com/</a>
+		</div>
+		<div class="item-3">
+			<a target="_blank" href="https://samanthaming.com">https://samanthaming.com</a>
+		</div>
+		<div class="item-3">
+			<a target="_blank" href="https://robbowen.digital">https://robbowen.digital</a>
+		</div>
+		<div class="item-3">
+			<a target="_blank" href="https://css-irl.info">https://css-irl.info</a>
+		</div>
+		<div class="item-3">
+			<a target="_blank" href="http://luciebajgart.com">https://luciebajgart.com</a>
+		</div>
+		<div class="item-3">
+			<a target="_blank" href="https://victorkaiwong.com">https://victorkaiwong.com</a>
+		</div>
+		<div class="item-3">
+			<a target="_blank" href="https://devinford.dev">https://devinford.dev</a>
+		</div>
+		<div class="item-3">
+			<a target="_blank" href="https://jason.af">https://jason.af</a>
+		</div>
+		<div class="item-3">
+			<a target="_blank" href="https://pierrickcalvez.com">https://pierrickcalvez.com</a>
+		</div>
+		<div class="item-3">
+			<a target="_blank" href="https://vanschneider.com">https://vanschneider.com</a>
+		</div>
+		<div class="item-3">
+			<a target="_blank" href="https://areoladaniel.com">https://areoladaniel.com</a>
+		</div>
+		<div class="item-3">
+			<a target="_blank" href="https://karriebriscoe.com/">https://karriebriscoe.com/</a>
+		</div>
+	</div>
+
+
+
 
 	<p><br><br>Return to <a href="../index.html">Contents</a>.</p>
 
