--- a/it4women/exercises/hero-blocks-one.html
+++ b/it4women/exercises/hero-blocks-one.html
@@ -29,6 +29,35 @@
 	})(window,document,'script','dataLayer','GTM-N54G36T');</script>
 	<!-- End Google Tag Manager -->
 
+	<style>
+
+	/* =======INNER FLEXBOX COLUMNS: 3 COLUMNS ON DESKTOPS, 1 COLUMN ON MOBILES ===== */
+
+	.container-flexbox { 
+	   display: flex; 
+	   justify-content: space-between; 
+	   flex-wrap: wrap; 
+	}
+	/* Desktops - 3 columns */
+	@media all and (min-width:768px) { 
+		.container-flexbox { width:100%; padding:0 }
+		.container-flexbox .item-3 { width: 30% }
+		.container-flexbox .item-3 img { width: 100%; height: auto }
+		.container-flexbox.sample-pages .item-3 { padding: 12px 0 }
+	}
+
+	/* Mobiles - 1 column */
+	@media all and (max-width:767px) { 
+		.container-flexbox { width:100%; padding:0 }
+		.container-flexbox .item-3 { width: 100% }
+		.container-flexbox .item-3 { margin-bottom: 8% }
+		.container-flexbox .item-3 img { }
+	}
+
+	
+
+	</style>
+
 </head>
 
 <body>
@@ -587,7 +616,7 @@ You have now finished creating the <b>slide-in-top</b> class.</li>
 
 	</ol>
 
-	<p>Repeat this stept to add icons to the other buttons in the other hero blocks.</p>
+	<p>Repeat this step to add icons to the other buttons in the other hero blocks.</p>
 
 </section>
 
