--- a/it4women/exercises/final-hero/hero-basic/after/hero-basic.html
+++ b/it4women/exercises/final-hero/hero-basic/after/hero-basic.html
@@ -10,7 +10,7 @@
 	<meta name="description" content="Showcase of single-column hero blocks with various fonts and coloured backgrounds.">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 	<link rel="stylesheet" href="assets/css/bootstrap-custom.css">
-	<link rel="stylesheet" href="hero-basic.css">
+	<link rel="stylesheet" href="assets/css/hero-basic.css">
 
 	<!-- Google Fonts -->
 
