--- a/it4women/index.html
+++ b/it4women/index.html
@@ -71,11 +71,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <section class="block-content">
 
 
-	<h2>Google Classroom</h2>
+	<h2>General Information</h2>
 	<div class="box-toc" style="background-color:#e2f5e2">
 		<p>The Google Classroom for the course is <a href="https://meet.google.com/swk-tdha-err" target="_blank"><b>here</b></a>.</p>
 
 		<p>My email address is <b>munnellyb@gmail.com</b>.</p>
+
+		<p>The SureSkills Trainer Evaluation Form is here: <a href="https://www.surveymonkey.com/r/SureSkillsEvaluationForm" target="_blank"><b>here</b></a>.</p>
 	</div>
 
 
