--- a/it4women/exercises/hero-blocks-one.html
+++ b/it4women/exercises/hero-blocks-one.html
@@ -54,8 +54,6 @@
 		.container-flexbox .item-3 img { }
 	}
 
-	
-
 	</style>
 
 </head>
@@ -104,6 +102,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		<p><a href="#hero-four">Hero block: sample four</a></p>
 		<p><a href="#hero-five">Hero block: sample five</a></p>
 		<p><a href="#animate-text">Animating text</a></p>
+		<p><a href="#font-awesome">Adding icons with Font Awesome</a></p>
 		<p><a href="#upload-github">Uploading your files to GitHub</a></p>
 	</div>
 </section>
@@ -131,16 +130,27 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		Right-click anywhere in the web page and choose <b>Save as...</b> (Chrome) or <b>Save Page As...</b> (Firefox) from the context menu displayed.
 		<span class="inside-ol">&nbsp;</span>
 		Save the web page in the <b>bootstrap</b> sub-folder of your <b>websites</b> folder with the name <b>hero-basic.html</b>
-		
-		<img src="assets/img/hero-blocks/hero-basic-html.png" alt="Working with Internal Hyperlinks"></li>
-		<li>You can close the browser tab containing the <b>hero-basic.html</b> web page.</li>
+		<span class="inside-ol">&nbsp;</span>
+		Ensure the <b>Save as type:</b> dropdown list is set to <b>Webpage, HTML only (*.HTML, *.htm)</b>.
+		<img src="assets/img/hero-blocks/hero-basic-html.png" alt="Working with Internal Hyperlinks">
+		You can close the browser tab containing the <b>hero-basic.html</b> web page.
+		<span class="inside-ol">&nbsp;</span>
+		Your <b>websites/bootstrap</b> sub-folder shown now look as shown below.
+		<img src="assets/img/hero-blocks/file-explorer-html.png" alt="Working with Internal Hyperlinks"></li>
 
 		<li><b><a href="final-hero/hero-basic/before/assets/css/hero-basic.css" target="_blank">hero-basic.css</a></b>: Click this link to open the stylesheet file in a new tab of your web browser.
 		<span class="inside-ol">&nbsp;</span>
 		Right-click anywhere in the browser window, and from the context menu, choose <b>Save as... (Chrome)</b> or <b>Save Page As...</b> (Firefox).
 		<span class="inside-ol">&nbsp;</span>
-		Save the <b>hero-basic.css</b> stylesheet file to your <b>websites/bootstrap/assets/css</b> sub-folder.</li>
-		<li>You can close the browser tab containing the <b>hero-basic.css</b> stylesheet.</li>
+		Save the <b>hero-basic.css</b> stylesheet file to your <b>websites/bootstrap/assets/css</b> sub-folder.
+		<span class="inside-ol">&nbsp;</span>
+		Ensure the <b>Save as type:</b> dropdown list is set to the correct file type.
+		<img src="assets/img/hero-blocks/hero-basic-css.png" alt="Working with Internal Hyperlinks" >
+		<span class="inside-ol">&nbsp;</span>
+		You can close the browser tab containing the <b>hero-basic.css</b> stylesheet.
+		<span class="inside-ol">&nbsp;</span>
+		Your <b>websites/bootstrap/assets/css</b> sub-folder shown now look as shown below.
+		<img src="assets/img/hero-blocks/file-explorer-html.png" alt="Working with Internal Hyperlinks"></li>
 	</ul>
 
 	<p>You have now saved the two files you need for this exercise.</p>
@@ -343,7 +353,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 
 	<h3>Update the hero-5 <span>font-family</span></h3>
-	<p>Your next task is to add Google Fonts for the text within the <b>hero-5</b> container. The Google Fonts named <b>Roboto Slab</b> and  <b>Roboto</b> have already been added to the web page and are available to your CSS file.</p>
+	<p>Your next task is to add Google Fonts for the text within the <b>hero-5</b> container. The Google Font named <b>Libre Baskerville</b> has already been added to the web page and are available to your CSS file.</p>
 	<ol>
 		<li>In VS Code, display the <b>hero-basic.css</b> stylesheet.</li>
 		<li>Update the following properties and values:
@@ -361,7 +371,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <section id="animate-text" class="wrapper-content bg-white">
 
 	<h2>Animating text</h2>
-		<p>In the final step below, you will animate the text headlines for the <b>hero-1</b> and <b>hero-2</b> blocks so that they slide in from the top (hero-1) and from the left (hero-2) of the web page.</p>
+		<p>In your next task you will animate the text headlines for the <b>hero-1</b> and <b>hero-2</b> blocks so that they slide in from the top (hero-1) and from the left (hero-2) of the web page.</p>
 		
 		<p>To generate the CSS code required for the animation effect, you will use the Animista website created by <a href="https://twitter.com/ana108" target="_blank">Ana Travas</a>.</p>
 
@@ -555,23 +565,20 @@ You have now finished creating the <b>slide-in-top</b> class.</li>
 
 	</ol>
 
-
-
-	<p>That&#8217;s it. You have now successfully updated the sample file of hero blocks.</p>
-
+	<p>That&#8217;s it. You have now successfully updated the exercise file of hero blocks.</p>
 
 	<p>Click <a href="final-hero/hero-basic/after/hero-basic.html" target="_blank">hero-basic.html</a> to view a finished sample of this web page in a new tab of your web browser.</p>
 
 </section>
 
 
-<section id="buttons-icons" class="wrapper-content bg-white">
+<section id="font-awesome" class="wrapper-content bg-white">
 	<h2>Adding icons with Font Awesome</h2>
 	<p>In the final part of this Tutorial, you will add some icons from Font Awesome to your button-styled hyperlinks.</p>
 
 	<ol>
 
-		<li>In VS Code, display your <b>page-11.html</b> file.</li>
+		<li>In VS Code, display your <b>hero-basic-html</b> file.</li>
 		
 		<li>In the head section of the web page, just before the closing <b><span class="syn">&lt;/head&gt;</span></b> tag, copy-and-paste the following comment line and code.
 
@@ -609,17 +616,78 @@ You have now finished creating the <b>slide-in-top</b> class.</li>
 	
 		<li>You can now copy-and-paste this or other selected icons to your web pages.</li>
 
-		<li>In your <b>hero-basic.html</b> web page, locate the first of the two hyperlink buttons.</li>
+		</ol>
+
+		<p>In the next two sections of this Tutorial, you will add Font Awesome icons to the buttons in the first two hero blocks of your sample web page.</p>
+
+		<h3>Adding icons to the hero-1 block</h3>
+
+		<ol>
+			<li>On the Font Awesome website, select and copy the code for a <b>user</b> icon.</li>
+
+			<li>In VS Code, locate the two buttons in the first hero block of your <b>hero-basic.html</b> web page.
+			<img src="assets/img/hero-blocks/fa-icons-1.png" alt="Hyperlink Buttons and Icons"></li>
+
+			<li>In the first of the two buttons, click just <i>after</i> the text <b>Start free.</b>
+			<span class="inside-ol">&nbsp;</span>
+			Press the <b>Spacebar</b> key once, and then type the following 'blank space' character twice.
+			<span class="inside-ol">&nbsp;</span>
+			<b>&amp;nbsp;</b>
+			<span class="inside-ol">&nbsp;</span>
+			Now, paste the icon code you copied from the Font Awesome website.
+			<img src="assets/img/hero-blocks/fa-icons-2.png" alt="Hyperlink Buttons and Icons">
+			Depending on which icon you selected, the icon code will be different.</li>
 				
-		<li>Click after the &#8216;Start Free&#8217; text, press the <b>Spacebar</b> key once and then paste the HTML code you copied from Font Awesome.
+			<li>Now let's move on to the second of the two buttons.
+			<span class="inside-ol">&nbsp;</span>
+			In the Font Awesome website, select and copy the code for a right-facing <b>arrow</b> icon.</li>
+
+			<li>In VS Code, repeat the above steps to paste in the icon code. It should look similar to below.
+			<img src="assets/img/hero-blocks/fa-icons-3.png" alt="Hyperlink Buttons and Icons">
+			Again, the font code will depend on which icon you have selected from Font Awesome.</li>
+
+			<li>Save and your <b>hero-basic.html</b> web page.</li>
+		</ol>
+
+	<p>In your web browser, depending on your choosen icons, the two buttons should look similar to those below.</p>
+	<img src="assets/img/hero-blocks/fa-icons-4.png" alt="Hyperlink Buttons and Icons">
+
+
+	<h3>Adding icons to the hero-2 block</h3>
+
+	<ol>
+		<li>In VS Code, locate the two buttons in the second hero block of your <b>hero-basic.html</b> web page.
+		<img src="assets/img/hero-blocks/fa-icons-5.png" alt="Hyperlink Buttons and Icons">
+		You can see that the first link is to a portfolio, and the second one is to a contact point.</li>
+
+		<li>On the Font Awesome website, select and copy the code for a suitable icon for linking to a portfolio.</li>
+
+		<li>In VS Code, let's add your selected icon to <i>before</i> the button text rather than after it.
+		<span class="inside-ol">&nbsp;</span>
+		Click just <i>before</i> the text <b>View My Work.</b>
+		<span class="inside-ol">&nbsp;</span>
+		Press the <b>Spacebar</b> key once, and then type the following 'blank space' character twice.
+		<span class="inside-ol">&nbsp;</span>
+		<b>&amp;nbsp;</b>
+		<span class="inside-ol">&nbsp;</span>
+		Now, paste the icon code you copied from the Font Awesome website.
+		<img src="assets/img/hero-blocks/fa-icons-6.png" alt="Hyperlink Buttons and Icons">
+		Depending on which icon you selected, the icon code will be different.</li>
 		
-		<img src="assets/img/hero-blocks/font-awesome-user-code-pasted.png" alt="Hyperlink Buttons and Icons"></li>
+		<li>Now let's move on to the second of the two buttons.
+		<span class="inside-ol">&nbsp;</span>
+		On the Font Awesome website, select and copy the code for a suitable icon for a point of contact.</li>
 
-		<li>Save and view your <b>hero-basic.html</b> file.</li>
+		<li>In VS Code, repeat the above steps to paste in the icon code. It should look similar to below.
+		<img src="assets/img/hero-blocks/fa-icons-7.png" alt="Hyperlink Buttons and Icons">
+		Again, the font code will depend on which icon you have selected from Font Awesome.</li>
 
+		<li>Save and your <b>hero-basic.html</b> web page.</li>
 	</ol>
 
-	<p>Repeat this step to add icons to the other buttons in the other hero blocks.</p>
+	<p>In your web browser, depending on your choosen icons, the two buttons should look similar to those below.</p>
+	<img src="assets/img/hero-blocks/fa-icons-8.png" alt="Hyperlink Buttons and Icons">
+
 
 </section>
 
