--- a/it4women/exercises/final-hero/hero-basic/after/hero-basic.html
+++ b/it4women/exercises/final-hero/hero-basic/after/hero-basic.html
@@ -22,6 +22,8 @@
 
 	<link href="https://fonts.googleapis.com/css2?family=Fjalla+One&display=swap" rel="stylesheet"> 
 
+	<!-- Link to icons for Font Awesome 5 -->
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" rel="stylesheet" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous">  
 </head>
 
 
@@ -35,10 +37,10 @@
 		<!-- Buttons start here -->
 		<div class="row">
 			<div class="col-md-6 col-xs-12 text-right">
-				<a class="btn btn-primary btn-lg" href="#" role="button">Start free</a>
+			<a class="btn btn-primary btn-lg" href="#" role="button">Start free &nbsp;&nbsp;<i class="fas fa-user"></i></a>
 			</div>	
 			<div class="col-md-6 col-xs-12">
-				<a class="btn btn-primary btn-lg" href="#" role="button">Book demo</a>
+				<a class="btn btn-primary btn-lg" href="#" role="button">Book demo  &nbsp;&nbsp;<i class="fas fa-arrow-circle-right"></i></a>
 			</div>	
 		</div>
 		<!-- Buttons end here -->
@@ -53,10 +55,10 @@
 		<!-- Buttons start here -->
 		<div class="row">
 			<div class="col-md-6 col-xs-12  text-right">
-				<a class="btn btn-primary btn-lg" href="#" role="button">View My Work</a>
+<a class="btn btn-primary btn-lg" href="#" role="button"><i class="fas fa-pencil-ruler"></i> &nbsp;&nbsp;View My Work</a>
 			</div>	
 			<div class="col-md-6 col-xs-12 ">
-				<a class="btn btn-primary btn-lg" href="#" role="button">Get in Touch</a>
+<a class="btn btn-primary btn-lg" href="#" role="button"><i class="fas fa-at"></i> &nbsp;&nbsp;Get in Touch</a>
 			</div>	
 		</div>
 		<!-- Buttons end here -->
